# hsa-hw-11-elasticsearch-with-typos

./: .gitattributes  README.md  delete.sh  docker-compose.yml  index.py  pyproject.toml  query.py
elasticsearch_data/nodes/0/_state/: _1d.cfe  _1d.cfs  _1d.si  _37.cfe  _37.cfs  _37.si  _3t.cfe  _3t.cfs  _3t.si  _3w.cfe  _3w.cfs  _3w.si  node-0.st  segments_40
elasticsearch_data/nodes/0/indices/U24U6UPSRgSNwZzdI4s0Ug/0/_state/: retention-leases-1.st  state-0.st
elasticsearch_data/nodes/0/indices/U24U6UPSRgSNwZzdI4s0Ug/0/index/: _0.cfe  _0.cfs  _0.si  _1.cfe  _1.cfs  _1.si  segments_3
elasticsearch_data/nodes/0/indices/U24U6UPSRgSNwZzdI4s0Ug/0/translog/: translog-3.tlog
elasticsearch_data/nodes/0/indices/U24U6UPSRgSNwZzdI4s0Ug/_state/: state-5.st
elasticsearch_data/nodes/0/indices/VbeLR1v7QiSgqDgK9pudhw/0/_state/: retention-leases-135.st  state-0.st
elasticsearch_data/nodes/0/indices/VbeLR1v7QiSgqDgK9pudhw/0/index/: _lz.fdm  _lz.fdt  _lz.fdx  _lz.fnm  _lz.kdd  _lz.kdi  _lz.kdm  _lz.nvd  _lz.nvm  _lz.si  _lz_Lucene80_0.dvd  _lz_Lucene80_0.dvm  _lz_Lucene84_0.doc  _lz_Lucene84_0.pos  _lz_Lucene84_0.tip  _lz_Lucene84_0.tmd  _n4.cfe  _n4.cfs  _n4.si  _nq.cfe  _nq.cfs  _nq.si  _nz.cfe  _nz.cfs  _nz.si  _o0.cfe  _o0.cfs  _o0.si  _o1.cfe  _o1.cfs  _o1.si  _o2.cfe  _o2.cfs  (+22 more)
elasticsearch_data/nodes/0/indices/VbeLR1v7QiSgqDgK9pudhw/_state/: state-2.st
elasticsearch_data/nodes/0/indices/Y38Vl7MVTVuzkXaxHQAtgw/_state/: state-6.st
elasticsearch_data/nodes/0/indices/jtIeU-nwSgCylnHU-xkqYw/_state/: state-1.st
elasticsearch_data/nodes/0/snapshot_cache/: segments_1
(+43 files in other folders)
