[tool.poetry]
name = "hsa-hw-11-elasticsearch-with-typos"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Oleksandr Baltian <oleksandr.baltian@maklai.com.ua>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.11"
httpx = "0.24.1"
nltk = "^3.8.1"


[tool.poetry.group.dev.dependencies]
darker = "1.7.1"
black = "23.3.0"
isort = "5.12.0"
mypy = "1.4.1"


[tool.isort]
profile = "black"


[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["google_measurement_protocol.*"]
ignore_missing_imports = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
